--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lib/"
   ],
   "dependencies": {
+    "base-64": "^0.1.0",
     "language-common": "github:openfn/language-common#v0.0.5",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "utf8": "^2.1.2"
   },
   "devDependencies": {
     "assertion-error": "^1.0.1",
